--- a/projects/ng-cdbangular/src/lib/components/button/button.component.scss
+++ b/projects/ng-cdbangular/src/lib/components/button/button.component.scss
@@ -8,22 +8,25 @@
 
 // size
 .xl {
-  padding: 30px;
+  padding: 1.875rem;
   font-size: 1.25rem;
 }
 
 .large {
-  padding: 20px 30px;
+  // padding: 20px 30px;
+  padding: 1.25rem 1.875rem;
   font-size: 1.25rem;
 }
 
 .medium {
-  padding: 10px 20px;
+  // padding: 10px 20px;
+  padding: 0.635rem 1.25rem;
   font-size: 1rem;
 }
 
 .small {
-  padding: 5px 10px;
+  // padding: 5px 10px;
+  padding: 0.3125rem 0.625rem;
   font-size: 0.75rem;
 }
 // End of size
