--- a/src/app/components/alert/alert.component.scss
+++ b/src/app/components/alert/alert.component.scss
@@ -16,7 +16,7 @@
   color: inherit;
   border: none;
   background-color: transparent;
-  align-self: flex-start;
+  align-self: center;
   cursor: pointer;
 }
 .CDBAlertButton:focus {
