--- a/src/app/components/pagination/pagination.component.scss
+++ b/src/app/components/pagination/pagination.component.scss
@@ -1,10 +1,12 @@
+@import "../../styles/colorStyles";
+
 .pagination {
   padding: 15px !important;
   border: 0.75px solid #ccc;
   border-radius: 0;
   align-items: center;
+  flex-wrap: wrap;
 
-  @import "../../styles/colorStyles";
   .page-link {
     min-width: 50px;
     min-height: 50px;
