fixed button circle & block option functionalities

--- a/projects/ng-cdbangular/src/lib/components/button/button.component.html
+++ b/projects/ng-cdbangular/src/lib/components/button/button.component.html
@@ -1,3 +1,5 @@
-<button #button [type]="type" class="btn CDBbtn {{ class }}" [style]="style" [disabled]="disabled">
-    <ng-content></ng-content>
-</button>
+<div #buttonWrapper>
+    <button #button [type]="type" class="btn CDBbtn {{ class }}" [style]="style" [disabled]="disabled">
+        <ng-content></ng-content>
+    </button>
+</div>
