--- a/projects/ng-cdbangular/src/lib/components/inputgroup/inputgroup.component.html
+++ b/projects/ng-cdbangular/src/lib/components/inputgroup/inputgroup.component.html
@@ -1,3 +1,7 @@
+<span *ngIf="icon">
+    <CDBIcon [icon]="icon" [brand]="iconBrand" [regular]="iconRegular" [light]="iconLight"></CDBIcon>
+</span>
+
 <CDBInput #CDBInput [class]="inputClass" [hint]="hint" [type]="type" [label]="label" [labelClass]="labelClass"
     [value]="value" [size]="size" [material]="material" [background]="background" [name]="name" [disabled]="disabled">
 
