added form reactivity for CDBInput

--- a/projects/ng-cdbangular/src/lib/components/input/input.component.html
+++ b/projects/ng-cdbangular/src/lib/components/input/input.component.html
@@ -51,6 +51,7 @@
           [required]="required"
           [value]="value"
           (input)="inputChange(input)"
+          (blur)="onBlur()"
         />
         <label #inputLabel *ngIf="label">{{ label }}</label>
 
