--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <h1 class="text-center pt-3">Testing Page</h1>
 
-<CDBBtn color="primary">Primary</CDBBtn>
+<CDBInput label="username" [(ngModel)]='username'></CDBInput>
+<p>{{username}}</p>
+<!-- <CDBBtn color="primary">Primary</CDBBtn>
 <CDBBtn color="secondary">Secondary</CDBBtn>
 <CDBBtn color="success">Success</CDBBtn>
 <CDBBtn color="danger">Danger</CDBBtn>
@@ -8,7 +10,7 @@
 <CDBBtn color="warning">Warning</CDBBtn>
 <CDBBtn color="info">Info</CDBBtn>
 <CDBBtn color="white">White</CDBBtn>
-<CDBBtn color="light">Light</CDBBtn>
+<CDBBtn color="light">Light</CDBBtn> -->
 
 
 <router-outlet></router-outlet>
